--- a/src/main/resources/template/Controller.java.vm
+++ b/src/main/resources/template/Controller.java.vm
@@ -11,7 +11,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import ${package}.${moduleName}.entity.${className}Entity;
+import ${package}.${moduleName}.entity.${className};
 import ${package}.${moduleName}.service.${className}Service;
 import ${mainPath}.common.utils.PageUtils;
 import ${mainPath}.common.utils.R;
@@ -35,7 +35,6 @@ public class ${className}Controller {
      * 列表
      */
     @RequestMapping("/list")
-    @RequiresPermissions("${moduleName}:${pathName}:list")
     public R list(@RequestParam Map<String, Object> params){
         PageUtils page = ${classname}Service.queryPage(params);
 
@@ -47,9 +46,8 @@ public class ${className}Controller {
      * 信息
      */
     @RequestMapping("/info/{${pk.attrname}}")
-    @RequiresPermissions("${moduleName}:${pathName}:info")
     public R info(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}){
-		${className}Entity ${classname} = ${classname}Service.getById(${pk.attrname});
+		${className} ${classname} = ${classname}Service.getById(${pk.attrname});
 
         return R.ok().put("${classname}", ${classname});
     }
@@ -58,8 +56,7 @@ public class ${className}Controller {
      * 保存
      */
     @RequestMapping("/save")
-    @RequiresPermissions("${moduleName}:${pathName}:save")
-    public R save(@RequestBody ${className}Entity ${classname}){
+    public R save(@RequestBody ${className} ${classname}){
 		${classname}Service.save(${classname});
 
         return R.ok();
@@ -69,8 +66,7 @@ public class ${className}Controller {
      * 修改
      */
     @RequestMapping("/update")
-    @RequiresPermissions("${moduleName}:${pathName}:update")
-    public R update(@RequestBody ${className}Entity ${classname}){
+    public R update(@RequestBody ${className} ${classname}){
 		${classname}Service.updateById(${classname});
 
         return R.ok();
@@ -80,7 +76,6 @@ public class ${className}Controller {
      * 删除
      */
     @RequestMapping("/delete")
-    @RequiresPermissions("${moduleName}:${pathName}:delete")
     public R delete(@RequestBody ${pk.attrType}[] ${pk.attrname}s){
 		${classname}Service.removeByIds(Arrays.asList(${pk.attrname}s));
 
