--- a/src/main/resources/template/Dao.java.vm
+++ b/src/main/resources/template/Dao.java.vm
@@ -12,6 +12,6 @@ import org.apache.ibatis.annotations.Mapper;
  * @date ${datetime}
  */
 @Mapper
-public interface ${className}Dao extends BaseMapper<${className}Entity> {
+public interface ${className}Mapper extends BaseMapper<${className}> {
 	
 }
