--- a/src/main/resources/template/Entity.java.vm
+++ b/src/main/resources/template/Entity.java.vm
@@ -1,5 +1,5 @@
 package ${package}.${moduleName}.entity;
-
+import com.baomidou.mybatisplus.annotation.IdType;
 import com.baomidou.mybatisplus.annotation.TableId;
 import com.baomidou.mybatisplus.annotation.TableName;
 
@@ -8,7 +8,6 @@ import java.math.BigDecimal;
 #end
 import java.io.Serializable;
 import java.util.Date;
-import lombok.Data;
 
 /**
  * ${comments}
@@ -17,9 +16,9 @@ import lombok.Data;
  * @email ${email}
  * @date ${datetime}
  */
-@Data
+
 @TableName("${tableName}")
-public class ${className}Entity implements Serializable {
+public class ${className} implements Serializable {
 	private static final long serialVersionUID = 1L;
 
 #foreach ($column in $columns)
@@ -27,9 +26,19 @@ public class ${className}Entity implements Serializable {
 	 * $column.comments
 	 */
 	#if($column.columnName == $pk.columnName)
-@TableId
+@TableId(value = "id",type = IdType.AUTO)
 	#end
 private $column.attrType $column.attrname;
 #end
 
+#foreach ($column in $columns)
+	public $column.attrType get$column.getMethod () {
+		return this.$column.attrname;
+	}
+
+	public void set$column.Method ($column.attrType $column.attrname) {
+		this.$column.attrname = $column.attrname;
+	}
+
+#end
 }
